fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -69,11 +69,11 @@
 @keyframes load-animation {
   0% {
     opacity: 0;
-    scale: 0;
+    transform: scale(0);
   }
   100% {
     opacity: 1;
-    scale: 1;
+    transform: scale(1);
   }
 }
 
